renamed app element; initiated Firebase

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "pulllutiona",
+  "name": "pullutiona",
   "description": "A pollution Tracker w/ Alarm",
   "main": "index.html",
   "dependencies": {
